updated server divs

--- a/index.html
+++ b/index.html
@@ -10,11 +10,20 @@
 </head>
 <body>
     <div class="app">
-        <div class="server-list">
-            <div class="server-icon">S1</div>
-            <div class="server-icon">S2</div>
-            <div class="server-icon">S3</div>
+      <div class="server-list">
+        <div class="server-icon">
+            S1
+            <div class="server-icon-tooltip">Server 1</div> <!-- Add this line for the tooltip -->
         </div>
+        <div class="server-icon">
+            S2
+            <div class="server-icon-tooltip">Server 2</div> <!-- Add this line for the tooltip -->
+        </div>
+        <div class="server-icon">
+            S3
+            <div class="server-icon-tooltip">Server 3</div> <!-- Add this line for the tooltip -->
+        </div>
+    </div>
         <div class="sidebar">
             <div class="server-name">Server 1</div>
             <div class="channel-header">TEXT CHANNELS</div>
